--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -5,3 +5,13 @@
     font-size: 16px;
     font-weight: bold;
 }
+.select2-container .select2-selection--single {
+    height: 38px !important;
+    padding: 6px 12px !important;
+    border: 1px solid #ced4da !important;
+    border-radius: 4px !important;
+    -webkit-border-radius: 4px !important;
+    -moz-border-radius: 4px !important;
+    -ms-border-radius: 4px !important;
+    -o-border-radius: 4px !important;
+}
